DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -18,7 +18,7 @@
     pages = "392--404",
     year = "2018",
     publisher = "Elsevier",
-    url = "https://www.sciencedirect.com/science/article/pii/S0028393218305037"
+    doi = "10.1016/j.neuropsychologia.2018.08.016"
 }
 
 @article{brodbeck2018rapid,
@@ -30,7 +30,7 @@
     pages = "3976--3983",
     year = "2018",
     publisher = "Elsevier",
-    url = "https://www.sciencedirect.com/science/article/pii/S096098221831409X"
+    doi = "10.1016/j.cub.2018.10.042"
 }
 
 @article{brooks2015evidence,
@@ -518,7 +518,7 @@
     pages = "108224",
     year = "2022",
     publisher = "Elsevier",
-    url = "https://www.sciencedirect.com/science/article/pii/S0028393222000835",
+    roi = "10.1016/j.neuropsychologia.2022.108224",
     google_result_id = "DZuPJ-wyR50J"
 }
 
@@ -799,7 +799,7 @@
     title = "Cortical speech tracking is related to individual prediction tendencies",
     journal = "Cerebral Cortex",
     year = "2023",
-    url = "https://academic.oup.com/cercor/advance-article-abstract/doi/10.1093/cercor/bhac528/6975346",
+    doi = "10.1093/cercor/bhac528",
     google_result_id = "qup-7vP0kAcJ"
 }
 
@@ -833,6 +833,112 @@
     pages = "29--52",
     year = "2023",
     publisher = "MIT Press",
-    url = "https://direct.mit.edu/nol/article-abstract/4/1/29/113251",
+    doi = "10.1162/nol_a_00084",
     google_result_id = "p2rj0jGLdrYJ"
+}
+
+@article{9bdfwPAvY8IJ,
+    author = "Reisinger, Patrick and Gillis, Marlies and Suess, Nina and Vanthornhout, Jonas and Haider, Chandra Leon and Hartmann, Thomas and Hauswald, Anne and Schwarz, Konrad and Francart, Tom and Weisz, Nathan",
+    title = "Neural speech tracking benefit of lip movements predicts behavioral deterioration when the speaker's mouth is occluded",
+    journal = "bioRxiv",
+    pages = "2023--04",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.04.17.536524",
+    google_result_id = "9bdfwPAvY8IJ"
+}
+
+@inproceedings{CdlM0PaoRKgJ,
+    author = "Das, Proloy and Purdon, Patrick L",
+    title = "Extracting common oscillatory time-courses from multichannel recordings: Oscillation Component Analysis",
+    booktitle = "2022 56th Asilomar Conference on Signals, Systems, and Computers",
+    pages = "602--606",
+    year = "2022",
+    organization = "IEEE",
+    journal = "???",
+    doi = "10.1109/IEEECONF56349.2022.10052084",
+    google_result_id = "CdlM0PaoRKgJ"
+}
+
+@article{Q4NUr8EQg0wJ,
+    author = "Kries, Jill and De Clercq, Pieter and Gillis, Marlies and Vanthornhout, Jonas and Lemmens, Robin and Francart, Tom and Vandermosten, Maaike",
+    title = "Exploring neural tracking of acoustic and linguistic speech representations in individuals with post-stroke aphasia",
+    journal = "bioRxiv",
+    pages = "2023--03",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.03.01.530707",
+    google_result_id = "Q4NUr8EQg0wJ"
+}
+
+@article{UQDn5Lsmj10J,
+    author = "Van Hirtum, Tilde and Somers, Ben and Verschueren, Eline and Dieudonn{\'e}, Benjamin and Francart, Tom",
+    title = "Delta-band neural envelope tracking predicts speech intelligibility in noise in preschoolers",
+    journal = "Hearing Research",
+    pages = "108785",
+    year = "2023",
+    publisher = "Elsevier",
+    doi = "10.1016/j.heares.2023.108785",
+    google_result_id = "UQDn5Lsmj10J"
+}
+
+@phdthesis{hGkwIfYX0SwJ,
+    author = "Matar, Suhail",
+    title = "Processing Latent Information in Language Comprehension",
+    year = "2022",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/7246644f610d3414638e549f6fa861fa/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "hGkwIfYX0SwJ"
+}
+
+@phdthesis{hY_45DaNN7AJ,
+    author = "Phillips, Sarah Frances",
+    title = "Composing Mixed-Language Expressions in the Bilingual Mind",
+    year = "2022",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/0813f09c02fbef0eff9dd220bc6daa3d/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "hY_45DaNN7AJ"
+}
+
+@article{nGawSpsaeXsJ,
+    author = "Kulasingham, Joshua P and Bachmann, Florine L and Eskelund, Kasper and Enqvist, Martin and Alickovic, Emina and Innes-Brown, Hamish",
+    title = "Predictors for Estimating Subcortical {EEG} Responses to Continuous Speech",
+    journal = "bioRxiv",
+    pages = "2023--03",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.03.01.530635",
+    google_result_id = "nGawSpsaeXsJ"
+}
+
+@article{r6sxXEpjc44J,
+    author = "Zhang, Jin-Xiao and Ten Brink, Maia and Yan, Yan and Goldstein-Piekarski, Andrea and Krause, Adam J and Manber, Rachel and Gross, James",
+    title = "Daytime Affect and Sleep {EEG} Activity: A Data-Driven Exploration",
+    year = "2023",
+    publisher = "PsyArXiv",
+    journal = "{PsyArXiv}",
+    doi = "10.31234/osf.io/aufbz",
+    google_result_id = "r6sxXEpjc44J"
+}
+
+@article{sbu-V1MdbqcJ,
+    author = "Brodbeck, Christian and Kandylaki, Katerina Danae and Scharenborg, Odette",
+    title = "Neural representations of non-native speech reflect proficiency and interference from native language knowledge",
+    journal = "bioRxiv",
+    pages = "2023--04",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.04.15.537014",
+    google_result_id = "sbu-V1MdbqcJ"
+}
+
+@article{u537bJgIDkkJ,
+    author = "De Clercq, Pieter and Kries, Jill and Mehraram, Ramtin and Vanthornhout, Jonas and Francart, Tom and Vandermosten, Maaike",
+    title = "Detecting post-stroke aphasia using {EEG}-based neural envelope tracking of natural speech",
+    journal = "medRxiv",
+    pages = "2023--03",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory Press",
+    doi = "10.1101/2023.03.14.23287194",
+    google_result_id = "u537bJgIDkkJ"
 }
