DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -942,3 +942,25 @@
     doi = "10.1101/2023.03.14.23287194",
     google_result_id = "u537bJgIDkkJ"
 }
+
+@article{aADnZp0CBmAJ,
+    author = "Karunathilake, IM Dushyanthi and Kulasingham, Joshua P and Simon, Jonathan Z",
+    title = "Neural Tracking Measures of Speech Intelligibility: Manipulating Intelligibility while Keeping Acoustics Unchanged",
+    journal = "bioRxiv",
+    pages = "2023--05",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.05.18.541269",
+    google_result_id = "aADnZp0CBmAJ"
+}
+
+@article{cNSSor0KzSwJ,
+    author = "Haider, Chandra Leon and Park, Hyojin and Hauswald, Anne and Weisz, Nathan",
+    title = "Lip movements and lexical features improve speech tracking differently for clear and multi-speaker speech",
+    journal = "bioRxiv",
+    pages = "2023--05",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.05.15.540818",
+    google_result_id = "cNSSor0KzSwJ"
+}
