DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -964,3 +964,12 @@
     doi = "10.1101/2023.05.15.540818",
     google_result_id = "cNSSor0KzSwJ"
 }
+
+@phdthesis{sf9zVQUc8sIJ,
+    author = "McHaney, Jacie R",
+    title = "Sensory and Cognitive Factors Underlying Self-Perceived Listening Difficulties in Adults with Normal Hearing Thresholds",
+    year = "2023",
+    school = "University of Pittsburgh",
+    url = "http://d-scholarship.pitt.edu/44538/",
+    google_result_id = "sf9zVQUc8sIJ"
+}
