DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -676,16 +676,6 @@
     google_result_id = "DydMiMelnaYJ"
 }
 
-@article{de2022beyond,
-    author = "De Clercq, Pieter and Vanthornhout, Jonas and Vandermosten, Maaike and Francart, Tom",
-    title = "Beyond Linear Neural Envelope Tracking: A Mutual Information Approach",
-    journal = "bioRxiv",
-    year = "2022",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2022.08.11.503600",
-    google_result_id = "uX8c_LpxGisJ"
-}
-
 @phdthesis{tulling2022neural,
     author = "Tulling, Maxime Alexandra",
     title = "Neural and developmental bases of processing language outside the here-and-now",
@@ -714,16 +704,6 @@
     publisher = "Cold Spring Harbor Laboratory",
     doi = "10.1101/2022.10.14.512299",
     google_result_id = "jQmGaEK_518J"
-}
-
-@article{xie2022cortical,
-    author = "Xie, Zilong and Brodbeck, Christian and Chandresekaran, Bharath",
-    title = "Cortical tracking of continuous speech under bimodal divided attention",
-    journal = "bioRxiv",
-    year = "2022",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2022.10.29.514344",
-    google_result_id = "lC-KuCZxkksJ"
 }
 
 @article{matarmodels,
@@ -762,17 +742,6 @@
     school = "New York University",
     url = "https://search.proquest.com/openview/e6f65a934e536643246e975828a3f2fb/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
     google_result_id = "EcBw_83IeQAJ"
-}
-
-@article{Q_15uAoI904J,
-    author = "Gillis, Marlies and Kries, Jill and Vandermosten, Maaike and Francart, Tom",
-    title = "Neural tracking of linguistic and acoustic speech representations decreases with advancing age",
-    journal = "NeuroImage",
-    pages = "119841",
-    year = "2022",
-    publisher = "Elsevier",
-    url = "https://www.sciencedirect.com/science/article/pii/S1053811922009624",
-    google_result_id = "Q_15uAoI904J"
 }
 
 @article{SDGO-jyIalsJ,
@@ -972,4 +941,119 @@
     school = "University of Pittsburgh",
     url = "http://d-scholarship.pitt.edu/44538/",
     google_result_id = "sf9zVQUc8sIJ"
+}
+
+@article{0S4CEDCrVlIJ,
+    author = "De Clercq, Pieter and Vanthornhout, Jonas and Vandermosten, Maaike and Francart, Tom",
+    title = "Beyond linear neural envelope tracking: a mutual information approach",
+    journal = "Journal of Neural Engineering",
+    volume = "20",
+    number = "2",
+    pages = "026007",
+    year = "2023",
+    publisher = "IOP Publishing",
+    url = "https://iopscience.iop.org/article/10.1088/1741-2552/acbe1d/meta",
+    google_result_id = "0S4CEDCrVlIJ"
+}
+
+@article{0aw8R8F5ZScJ,
+    author = "Xie, Zilong and Brodbeck, Christian and Chandrasekaran, Bharath",
+    title = "Cortical tracking of continuous speech under bimodal divided attention",
+    journal = "Neurobiology of Language",
+    volume = "4",
+    number = "2",
+    pages = "318--343",
+    year = "2023",
+    publisher = "MIT Press",
+    url = "https://direct.mit.edu/nol/article-abstract/4/2/318/114548",
+    google_result_id = "0aw8R8F5ZScJ"
+}
+
+@article{1KMzh56-QbIJ,
+    author = "Gillis, Marlies and Kries, Jill and Vandermosten, Maaike and Francart, Tom",
+    title = "Neural tracking of linguistic and acoustic speech representations decreases with advancing age",
+    journal = "NeuroImage",
+    volume = "267",
+    pages = "119841",
+    year = "2023",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S1053811922009624",
+    google_result_id = "1KMzh56-QbIJ"
+}
+
+@article{3OfOFKNRbCgJ,
+    author = "Das, Proloy and He, Mingjian and Purdon, Patrick L",
+    title = "A dynamic generative model can extract interpretable oscillatory components from multichannel neurophysiological recordings",
+    journal = "bioRxiv",
+    pages = "2023--07",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.07.26.550594",
+    google_result_id = "3OfOFKNRbCgJ"
+}
+
+@article{JCCLbB4_HV0J,
+    author = "Commuri, Vrishab and Kulasingham, Joshua P and Simon, Jonathan Z",
+    title = "Cortical Responses Time-Locked to Continuous Speech in the High-Gamma Band Depend on Selective Attention",
+    journal = "bioRxiv",
+    pages = "2023--07",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.07.20.549567",
+    google_result_id = "JCCLbB4_HV0J"
+}
+
+@article{SnFlXj1cS10J,
+    author = "Berto, Martina and Reisinger, Patrick and Ricciardi, Emiliano and Weisz, Nathan and Bottari, Davide",
+    title = "Hemispheric asymmetries in auditory cortex reflect discriminative responses to temporal details or summary statistics of stationary sounds.",
+    journal = "bioRxiv",
+    pages = "2023--08",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.08.03.551829",
+    google_result_id = "SnFlXj1cS10J"
+}
+
+@article{TuCxI8dXO-MJ,
+    author = "Wang, Zhouheng and Shi, Nanlin and Zhang, Yingchao and Zheng, Ning and Li, Haicheng and Jiao, Yang and Cheng, Jiahui and Wang, Yutong and Zhang, Xiaoqing and Chen, Ying and others",
+    title = "Conformal in-ear bioelectronics for visual and auditory brain-computer interfaces",
+    journal = "Nature Communications",
+    volume = "14",
+    number = "1",
+    pages = "4213",
+    year = "2023",
+    publisher = "Nature Publishing Group UK London",
+    url = "https://www.nature.com/articles/s41467-023-39814-6",
+    google_result_id = "TuCxI8dXO-MJ"
+}
+
+@article{Zbo1wD4LWK8J,
+    author = "Schubert, Juliane and Gehmacher, Quirin and Schmidt, Fabian and Hartmann, Thomas and Weisz, Nathan",
+    title = "Prediction tendency, eye movements, and attention in a unified framework of neural speech tracking",
+    journal = "bioRxiv",
+    pages = "2023--06",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.06.27.546746",
+    google_result_id = "Zbo1wD4LWK8J"
+}
+
+@article{lovxdtqizYgJ,
+    author = "Van Hirtum, Tilde and Somers, Ben and Dieudonn{\'e}, Benjamin and Verschueren, Eline and Wouters, Jan and Francart, Tom",
+    title = "Neural envelope tracking predicts speech intelligibility and hearing aid benefit in children with hearing loss",
+    journal = "bioRxiv",
+    pages = "2023--07",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.07.03.547477",
+    google_result_id = "lovxdtqizYgJ"
+}
+
+@phdthesis{rAZLgftLyykJ,
+    author = "Flick, Graham",
+    title = "From Letters to Concepts: Examining the Brain Systems That Support Word Recognition and Composition in Reading",
+    year = "2023",
+    school = "New York University",
+    url = "https://search.proquest.com/openview/f646a07b5293992715ea963d3d2a05bd/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
+    google_result_id = "rAZLgftLyykJ"
 }
