DOC:  Update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -1057,3 +1057,70 @@
     url = "https://search.proquest.com/openview/f646a07b5293992715ea963d3d2a05bd/1?pq-origsite=gscholar\&cbl=18750\&diss=y",
     google_result_id = "rAZLgftLyykJ"
 }
+
+@article{Ua13MeR86koJ,
+    author = "Chac{\'o}n, Dustin Alfonso and Pylkkanen, Liina",
+    title = "Disentangling semantic prediction and association in processing filler-gap dependencies: An {MEG} study in English",
+    year = "2023",
+    publisher = "PsyArXiv",
+    journal = "{PsyArXiv}",
+    url = "https://osf.io/preprints/psyarxiv/4h86e/",
+    google_result_id = "Ua13MeR86koJ"
+}
+
+@phdthesis{WTXE6hHPAU8J,
+    author = "Verschueren, Eline",
+    title = "Objective measurement of speech intelligibility with cochlear implants",
+    year = "2022",
+    school = "KU Leuven",
+    url = "https://lirias.kuleuven.be/handle/20.500.12942/704537",
+    google_result_id = "WTXE6hHPAU8J"
+}
+
+@article{b9Oy_8wM6gAJ,
+    author = {Li, Jixing and Lai, Marco and Pylkk{\"a}nen, Liina},
+    title = "Semantic composition in experimental and naturalistic paradigms",
+    journal = "bioRxiv",
+    pages = "2023--10",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.10.31.564951",
+    google_result_id = "b9Oy_8wM6gAJ"
+}
+
+@article{kBuN8Hxa09wJ,
+    author = "Bachmann, Florine L and Kulasingham, Joshua P and Eskelund, Kasper and Enqvist, Martin and Alickovic, Emina and Innes-Brown, Hamish",
+    title = "Extending Subcortical {EEG} Responses to Continuous Speech to the Sound-Field",
+    journal = "bioRxiv",
+    pages = "2023--11",
+    year = "2023",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2023.11.08.566173",
+    google_result_id = "kBuN8Hxa09wJ"
+}
+
+@article{kV26PSyqQNEJ,
+    author = "Wilroth, Johanna and Kulasingham, Joshua P and Skoglund, Martin A and Alickovic, Emina",
+    title = "Direct Estimation of Linear Filters for {EEG} Source-Localization in a Competing-Talker Scenario",
+    journal = "IFAC-PapersOnLine",
+    volume = "56",
+    number = "2",
+    pages = "6510--6517",
+    year = "2023",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S2405896323006511",
+    google_result_id = "kV26PSyqQNEJ"
+}
+
+@article{l5V5RyufG_YJ,
+    author = "Goldman, Ebony and Bou-Dargham, Sherine and Lai, Marco and Guda, Anvita and Fallon, Jacqui and Hauptman, Miriam and Reinoso, Alejandra and Phillips, Sarah and Abrams, Ellie and Parrish, Alicia and others",
+    title = "{MEG} correlates of speech planning in simple vs. interactive picture naming in children and adults",
+    journal = "Plos one",
+    volume = "18",
+    number = "10",
+    pages = "e0292316",
+    year = "2023",
+    publisher = "Public Library of Science San Francisco, CA USA",
+    url = "https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0292316",
+    google_result_id = "l5V5RyufG_YJ"
+}
