DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -399,15 +399,6 @@
     url = "https://www.biorxiv.org/content/10.1101/2021.01.31.429030v3.abstract"
 }
 
-@article{brodbeck2021eelbrain,
-    author = "Brodbeck, Christian and Das, Proloy and Kulasingham, Joshua P and Bhattasali, Shohini and Gaston, Phoebe and Resnik, Philip and Simon, Jonathan Z",
-    title = "Eelbrain: A Python toolkit for time-continuous analysis with temporal response functions",
-    journal = "bioRxiv",
-    year = "2021",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2021.08.01.454687"
-}
-
 @article{wray2022early,
     author = "Wray, Samantha and Stockall, Linnaea and Marantz, Alec",
     title = "Early Form-Based Morphological Decomposition in Tagalog: {MEG} Evidence from Reduplication, Infixation, and Circumfixation",
@@ -600,16 +591,6 @@
     google_result_id = "-cJ_wI_xKTkJ"
 }
 
-@article{herrera2021cortical,
-    author = "Herrera, Christian and Whittle, Nicole and Leek, Marjorie R and Brodbeck, Christian and Lee, Grace and Barcenas, Caleb and Barnes, Samuel and Holshouser, Barbara and Alex, C Yi and Venezia, Jonathan",
-    title = "Cortical Networks for Recognition of Speech with Simultaneous Talkers",
-    journal = "{PsyArXiv}",
-    year = "2021",
-    publisher = "PsyArXiv",
-    url = "https://psyarxiv.com/vea5y/",
-    google_result_id = "xgoUWQYzdnoJ"
-}
-
 @article{das2020neuro,
     author = "Das, Proloy and Brodbeck, Christian and Simon, Jonathan Z and Babadi, Behtash",
     title = "Neuro-current response functions: A unified approach to {MEG} source analysis under the continuous stimuli paradigm",
@@ -666,16 +647,6 @@
     google_result_id = "c_mz6x1eGDgJ"
 }
 
-@article{tezcan2022tradeoff,
-    author = "Tezcan, Filiz and Weissbart, Hugo and Martin, Andrea E",
-    title = "A tradeoff between acoustic and linguistic feature encoding in spoken language comprehension",
-    journal = "bioRxiv",
-    year = "2022",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2022.08.17.504234",
-    google_result_id = "DydMiMelnaYJ"
-}
-
 @phdthesis{tulling2022neural,
     author = "Tulling, Maxime Alexandra",
     title = "Neural and developmental bases of processing language outside the here-and-now",
@@ -713,16 +684,6 @@
     year = "2022",
     url = "https://2022.ccneuro.org/proceedings/0000331.pdf",
     google_result_id = "mBZCoKR6Va4J"
-}
-
-@article{gillis2022heard,
-    author = "Gillis, Marlies and Vanthornhout, Jonas and Francart, Tom",
-    title = "Heard or understood? Neural tracking of language features in a comprehensible story, an incomprehensible story and a word list",
-    journal = "bioRxiv",
-    year = "2022",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2022.11.22.517477",
-    google_result_id = "7w3_G4qWqWUJ"
 }
 
 @article{schmidt2022age,
@@ -869,17 +830,6 @@
     google_result_id = "hY_45DaNN7AJ"
 }
 
-@article{nGawSpsaeXsJ,
-    author = "Kulasingham, Joshua P and Bachmann, Florine L and Eskelund, Kasper and Enqvist, Martin and Alickovic, Emina and Innes-Brown, Hamish",
-    title = "Predictors for Estimating Subcortical {EEG} Responses to Continuous Speech",
-    journal = "bioRxiv",
-    pages = "2023--03",
-    year = "2023",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2023.03.01.530635",
-    google_result_id = "nGawSpsaeXsJ"
-}
-
 @article{r6sxXEpjc44J,
     author = "Zhang, Jin-Xiao and Ten Brink, Maia and Yan, Yan and Goldstein-Piekarski, Andrea and Krause, Adam J and Manber, Rachel and Gross, James",
     title = "Daytime Affect and Sleep {EEG} Activity: A Data-Driven Exploration",
@@ -888,17 +838,6 @@
     journal = "{PsyArXiv}",
     doi = "10.31234/osf.io/aufbz",
     google_result_id = "r6sxXEpjc44J"
-}
-
-@article{sbu-V1MdbqcJ,
-    author = "Brodbeck, Christian and Kandylaki, Katerina Danae and Scharenborg, Odette",
-    title = "Neural representations of non-native speech reflect proficiency and interference from native language knowledge",
-    journal = "bioRxiv",
-    pages = "2023--04",
-    year = "2023",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2023.04.15.537014",
-    google_result_id = "sbu-V1MdbqcJ"
 }
 
 @article{u537bJgIDkkJ,
@@ -1077,17 +1016,6 @@
     google_result_id = "WTXE6hHPAU8J"
 }
 
-@article{b9Oy_8wM6gAJ,
-    author = {Li, Jixing and Lai, Marco and Pylkk{\"a}nen, Liina},
-    title = "Semantic composition in experimental and naturalistic paradigms",
-    journal = "bioRxiv",
-    pages = "2023--10",
-    year = "2023",
-    publisher = "Cold Spring Harbor Laboratory",
-    doi = "10.1101/2023.10.31.564951",
-    google_result_id = "b9Oy_8wM6gAJ"
-}
-
 @article{kBuN8Hxa09wJ,
     author = "Bachmann, Florine L and Kulasingham, Joshua P and Eskelund, Kasper and Enqvist, Martin and Alickovic, Emina and Innes-Brown, Hamish",
     title = "Extending Subcortical {EEG} Responses to Continuous Speech to the Sound-Field",
@@ -1123,4 +1051,209 @@
     publisher = "Public Library of Science San Francisco, CA USA",
     url = "https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0292316",
     google_result_id = "l5V5RyufG_YJ"
+}
+
+@article{5mwlgLpxOtQJ,
+    author = "Coopmans, Cas W and de Hoop, Helen and Tezcan, Filiz and Hagoort, Peter and Martin, Andrea E",
+    title = "Neural dynamics express syntax in the time domain during natural story listening",
+    journal = "bioRxiv",
+    pages = "2024--03",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.03.19.585683",
+    google_result_id = "5mwlgLpxOtQJ"
+}
+
+@article{7HLewNr82EcJ,
+    author = "Kulasingham, Joshua P and Innes-Brown, Hamish and Enqvist, Martin and Alickovic, Emina P",
+    title = "Level Dependent Subcortical {EEG} Responses to Continuous Speech",
+    journal = "bioRxiv",
+    pages = "2024--04",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.04.01.587607",
+    google_result_id = "7HLewNr82EcJ"
+}
+
+@article{A5xKK--mx_4J,
+    author = "Dunagan, Donald and Jordan, Tyson and Hale, John T and Pylkk{\"a}nen, Liina and Chac{\'o}n, Dustin A",
+    title = "Rapid visual form-based processing of (some) grammatical features in parallel reading: An {EEG} study in English",
+    journal = "bioRxiv",
+    pages = "2024--04",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.04.10.588861",
+    google_result_id = "A5xKK--mx_4J"
+}
+
+@article{FPlfYslhtYcJ,
+    author = "Brodbeck, Christian and Kandylaki, Katerina Danae and Scharenborg, Odette",
+    title = "Neural representations of non-native speech reflect proficiency and interference from native language knowledge",
+    journal = "Journal of Neuroscience",
+    volume = "44",
+    number = "1",
+    year = "2024",
+    publisher = "Soc Neuroscience",
+    url = "https://www.jneurosci.org/content/44/1/e0666232023.abstract",
+    google_result_id = "FPlfYslhtYcJ"
+}
+
+@article{HKbIagUVda0J,
+    author = "Kulasingham, Joshua P and Bachmann, Florine L and Eskelund, Kasper and Enqvist, Martin and Innes-Brown, Hamish and Alickovic, Emina",
+    title = "Predictors for estimating subcortical {EEG} responses to continuous speech",
+    journal = "Plos one",
+    volume = "19",
+    number = "2",
+    pages = "e0297826",
+    year = "2024",
+    publisher = "Public Library of Science San Francisco, CA USA",
+    url = "https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0297826",
+    google_result_id = "HKbIagUVda0J"
+}
+
+@article{SmtSkHsARoEJ,
+    author = "Krogh, Simone and Pylkkanen, Liina",
+    title = "Manipulating syntax without taxing working memory: {MEG} correlates of syntactic dependencies in a Verb-Second language",
+    journal = "bioRxiv",
+    pages = "2024--02",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.02.20.581245",
+    google_result_id = "SmtSkHsARoEJ"
+}
+
+@article{T6Va-ETPWyYJ,
+    author = "Mehraram, Ramtin and De Clercq, Pieter and Kries, Jill and Vandermosten, Maaike and Francart, Tom",
+    title = "Functional connectivity of stimulus-evoked brain responses to natural speech in post-stroke aphasia.",
+    journal = "medRxiv",
+    pages = "2024--01",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory Press",
+    url = "https://www.medrxiv.org/content/10.1101/2024.01.15.24301324.abstract",
+    google_result_id = "T6Va-ETPWyYJ"
+}
+
+@article{V7KTqL9JxC8J,
+    author = "Herrera, Christian and Whittle, Nicole and Leek, Marjorie R and Brodbeck, Christian and Lee, Grace and Barcenas, Caleb and Barnes, Samuel and Holshouser, Barbara and Yi, Alex and Venezia, Jonathan H",
+    title = "Cortical networks for recognition of speech with simultaneous talkers",
+    journal = "Hearing Research",
+    volume = "437",
+    pages = "108856",
+    year = "2023",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0378595523001685",
+    google_result_id = "V7KTqL9JxC8J"
+}
+
+@article{VdOvxQDQkmwJ,
+    author = "Haider, Chandra Leon and Hauswald, Anne and Weisz, Nathan",
+    title = "Decreasing hearing ability does not lead to improved visual speech extraction as revealed in a neural speech tracking paradigm",
+    journal = "bioRxiv",
+    pages = "2024--03",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.03.13.584400",
+    google_result_id = "VdOvxQDQkmwJ"
+}
+
+@article{WI_MVZm7tFwJ,
+    author = {Li, Jixing and Lai, Marco and Pylkk{\"a}nen, Liina},
+    title = "Semantic composition in experimental and naturalistic paradigms",
+    journal = "Imaging Neuroscience",
+    volume = "2",
+    pages = "1--17",
+    year = "2024",
+    publisher = "MIT Press One Broadway, 12th Floor, Cambridge, Massachusetts 02142, USA\textasciitilde",
+    url = "https://direct.mit.edu/imag/article/doi/10.1162/imag_a_00072/118936",
+    google_result_id = "WI_MVZm7tFwJ"
+}
+
+@article{gLBYVgsuNtwJ,
+    author = "Brodbeck, Christian and Hannagan, Thomas and Magnuson, James S",
+    title = "Recurrent neural networks as neuro-computational models of human speech recognition",
+    journal = "bioRxiv",
+    pages = "2024--02",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.02.20.580731",
+    google_result_id = "gLBYVgsuNtwJ"
+}
+
+@article{hdwNKWPReRIJ,
+    author = "Gillis, Marlies and Vanthornhout, Jonas and Francart, Tom",
+    title = "Heard or understood? Neural tracking of language features in a comprehensible story, an incomprehensible story and a word list",
+    journal = "eneuro",
+    volume = "10",
+    number = "7",
+    year = "2023",
+    publisher = "Society for Neuroscience",
+    url = "https://www.eneuro.org/content/10/7/ENEURO.0075-23.2023.abstract",
+    google_result_id = "hdwNKWPReRIJ"
+}
+
+@article{jSIhURNnAncJ,
+    author = "Karunathilake, IM Dushyanthi and Brodbeck, Christian and Bhattasali, Shohini and Resnik, Philip and Simon, Jonathan Z",
+    title = "Neural Dynamics of the Processing of Speech Features: Evidence for a Progression of Features from Acoustic to Sentential Processing",
+    journal = "bioRxiv",
+    pages = "2024--02",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.02.02.578603",
+    google_result_id = "jSIhURNnAncJ"
+}
+
+@article{olMti3AcYE4J,
+    author = "Gao, Changjiang and Li, Jixing and Chen, Jiajun and Huang, Shujian",
+    title = "Measuring Meaning Composition in the Human Brain with Composition Scores from Large Language Models",
+    journal = "arXiv preprint arXiv:2403.04325",
+    year = "2024",
+    url = "https://arxiv.org/abs/2403.04325",
+    google_result_id = "olMti3AcYE4J"
+}
+
+@article{ooYbGuVeadEJ,
+    author = "Tezcan, Filiz and Weissbart, Hugo and Martin, Andrea E",
+    title = "A tradeoff between acoustic and linguistic feature encoding in spoken language comprehension",
+    journal = "Elife",
+    volume = "12",
+    pages = "e82386",
+    year = "2023",
+    publisher = "eLife Sciences Publications Limited",
+    url = "https://elifesciences.org/articles/82386",
+    google_result_id = "ooYbGuVeadEJ"
+}
+
+@article{pcKL4JD-pBcJ,
+    author = "Lin, Nan and Zhang, Xiaohan and Wang, Xiuyi and Wang, Shaonan",
+    title = "The organization of the semantic network as reflected by the neural correlates of six semantic dimensions",
+    journal = "Brain and Language",
+    volume = "250",
+    pages = "105388",
+    year = "2024",
+    publisher = "Elsevier",
+    url = "https://www.sciencedirect.com/science/article/pii/S0093934X24000117",
+    google_result_id = "pcKL4JD-pBcJ"
+}
+
+@article{sF3JAUgRpJ4J,
+    author = "Chac{\'o}n, Dustin A and Shrestha, Subhekshya and Dillon, Brian W and Bhatt, Rajesh and Almeida, Diogo and Marantz, Alec",
+    title = "Same Sentences, Different Grammars, Different Brain Responses: An {MEG} study on Case and Agreement Encoding in Hindi and Nepali Split-Ergative Structures",
+    journal = "bioRxiv",
+    pages = "2024--02",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.02.12.579942",
+    google_result_id = "sF3JAUgRpJ4J"
+}
+
+@article{xZH5VJ8_UPsJ,
+    author = "Brodbeck, Christian and Das, Proloy and Gillis, Marlies and Kulasingham, Joshua P and Bhattasali, Shohini and Gaston, Phoebe and Resnik, Philip and Simon, Jonathan Z",
+    title = "Eelbrain, a Python toolkit for time-continuous analysis with temporal response functions",
+    journal = "Elife",
+    volume = "12",
+    pages = "e85012",
+    year = "2023",
+    publisher = "eLife Sciences Publications Limited",
+    url = "https://elifesciences.org/articles/85012",
+    google_result_id = "xZH5VJ8_UPsJ"
 }
