DOC:  update publications

--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -1076,7 +1076,7 @@
 }
 
 @article{A5xKK--mx_4J,
-    author = "Dunagan, Donald and Jordan, Tyson and Hale, John T and Pylkk{\"a}nen, Liina and Chac{\'o}n, Dustin A",
+    author = {Dunagan, Donald and Jordan, Tyson and Hale, John T and Pylkk{\"a}nen, Liina and Chac{\'o}n, Dustin A},
     title = "Rapid visual form-based processing of (some) grammatical features in parallel reading: An {EEG} study in English",
     journal = "bioRxiv",
     pages = "2024--04",
@@ -1256,4 +1256,37 @@
     publisher = "eLife Sciences Publications Limited",
     url = "https://elifesciences.org/articles/85012",
     google_result_id = "xZH5VJ8_UPsJ"
+}
+
+@article{-8UUshK3OykJ,
+    author = "Matar, Suhail and Marantz, Alec",
+    title = "Neural bases of proactive and predictive processing of meaningful sub-word units in speech comprehension",
+    journal = "bioRxiv",
+    pages = "2024--04",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.04.29.591610",
+    google_result_id = "-8UUshK3OykJ"
+}
+
+@article{CLXrUtHl5n0J,
+    author = "Pirrung, Christopher JH and Singh, Garima and Hogeveen, Jeremy and Quinn, Davin and Cavanagh, James F",
+    title = "Hypoactivation of ventromedial frontal cortex in major depressive disorder: an {MEG} study of the Reward Positivity",
+    journal = "bioRxiv",
+    pages = "2024--04",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.04.18.590159",
+    google_result_id = "CLXrUtHl5n0J"
+}
+
+@article{oSBcAEsITWYJ,
+    author = "Chacon, Dustin A and Dunagan, Donald Gray and McLendon, Jill and Khokhar, Hareem and Hoque, Zahin",
+    title = "Quick, Don't Move!: Wh-Movement and Wh-In-Situ Structures in Rapid Parallel Reading-{EEG} studies in English, Urdu, and Mandarin Chinese",
+    journal = "bioRxiv",
+    pages = "2024--05",
+    year = "2024",
+    publisher = "Cold Spring Harbor Laboratory",
+    doi = "10.1101/2024.05.06.592830",
+    google_result_id = "oSBcAEsITWYJ"
 }
